--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="home.css">
 <a href="home.html" class="home-icon">
   <img src="image/img4.png" alt="Home" />
