Add DOCTYPE declaration to o_nas.html

--- a/o_nas.html
+++ b/o_nas.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="o_nas.css">
 <a href="home.html" class="home-icon">
 	<img src="image/img4.png" alt="Home" />
