Add comments to home.html for better clarity
Added comments for logo, main heading, navigation, and page content.

--- a/home.html
+++ b/home.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
+  <!-- Logo / Home ikonka -->
   <a href="home.html" class="home-icon">
     <img src="image/img4.png" alt="Home" />
   </a>
 
+  <!-- Hlavní nadpis -->
   <h1>EcoTaste</h1>
 
+  <!-- Navigace -->
   <nav class="subtitle-row">
     <a href="o_nas.html" class="subtitle-link">O nás</a>
     <a href="sluzby.html" class="subtitle-link">Služby</a>
@@ -20,6 +23,7 @@
     <a href="kontakt.html" class="subtitle-link">Kontakt</a>
   </nav>
 
+  <!-- Obsah stránky -->
   <div class="mainbox">
     <p class="p1">
       EcoTaste je místem, kde se setkává láska k přírodě s chutí kvalitního jídla. 
@@ -37,4 +41,8 @@
       snažíme měnit svět kolem nás. Najdete zde odkazy na naše služby, projekty i inspirativní 
       články, které vám pomohou začít vlastní cestu k udržitelnosti. EcoTaste není jen o jídle, 
       ale o celkovém přístupu k životu, kde se respekt k přírodě stává samozřejmostí. Věříme, 
-      že společ
+      že společně dokážeme vytvořit prostředí, které bude zdravější a přívětivější pro budoucí generace.
+    </p>
+  </div>
+</body>
+</html>
